# EVA-planner

./: .gitignore  README.md
src/adaptive_planner/path_searching/: CMakeLists.txt  package.xml
src/adaptive_planner/path_searching/include/path_searching/: astar.h  astar3d.h  high_mpcc_optimizer.h  low_mpc.h
src/adaptive_planner/path_searching/src/: astar.cpp  astar3d.cpp  high_mpcc_optimizer.cpp  low_mpc_optimizer.cpp
src/adaptive_planner/plan_env/: CMakeLists.txt  package.xml
src/adaptive_planner/plan_env/include/plan_env/: edt_environment.h  sdf_map.h
src/adaptive_planner/plan_env/launch/: test.launch
src/adaptive_planner/plan_env/rviz/: test.rviz
src/adaptive_planner/plan_env/src/: edt_environment.cpp  sdf_map.cpp
src/adaptive_planner/plan_manage/: CMakeLists.txt  package.xml
src/adaptive_planner/plan_manage/config/: traj.yaml
src/adaptive_planner/plan_manage/include/plan_manage/: adaptive_replan_fsm.h  planner_manager.h
src/adaptive_planner/plan_manage/launch/: experiment.launch  full_test.launch  jackal_simulation.launch  planner_exp.xml  planner_sim.xml  rviz.launch  simulation.launch  simulator.xml  test.launch
src/adaptive_planner/plan_manage/launch/rviz_config/: exp.rviz  sim.rviz
src/adaptive_planner/plan_manage/src/: adaptive_planner_node.cpp  adaptive_replan_fsm.cpp  planner_manager.cpp
src/adaptive_planner/quadrotor_msgs/: CMakeLists.txt
src/adaptive_planner/traj_utils/: CMakeLists.txt  package.xml
src/adaptive_planner/traj_utils/include/traj_utils/: planning_visualization.h
src/adaptive_planner/traj_utils/src/: planning_visualization.cpp
src/erl_jackal/erl_development/: .gitignore  README.md
src/erl_jackal/erl_development/erl_costmap_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
src/erl_jackal/erl_development/erl_costmap_ros/include/erl_costmap_ros/: erl_costmap.h  erl_costmap_ros.h
src/erl_jackal/erl_development/erl_costmap_ros/launch/: erl_costmap_ros_node.launch
src/erl_jackal/erl_development/erl_costmap_ros/rviz/: costmap.rviz
src/erl_jackal/erl_development/erl_costmap_ros/src/: erl_costmap_ros.cpp
src/erl_jackal/erl_development/erl_msgs/: CMakeLists.txt  README.md  package.xml
src/erl_jackal/erl_development/erl_msgs/action/: CallOP.action  CallRVI.action
src/erl_jackal/erl_development/erl_msgs/msg/: ConeControllerDebug.msg  CustomPath.msg  EasaParams.msg  EmergencyStopMsg.msg  Feature.msg  GridMap.msg  Keyframe.msg  LandmarkMap.msg  MultiTargetBelief.msg  PlanningStatus.msg  PointTrajectory.msg  PointTrajectoryArray.msg  PointWithId.msg  PoseTrajectory.msg  PoseTrajectoryArray.msg  PrimitiveTrajectory.msg  RefGvnDebug.msg  RefGvnDist.msg  RefGvnMsg.msg  RelativePose.msg
src/erl_jackal/erl_development/erl_msgs/srv/: CallAStar.srv  CallRVI.srv  GetGridMap.srv
src/erl_jackal/erl_development/erl_utilities/: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
src/erl_jackal/erl_development/erl_utilities/include/erl_utilities/: erl_camera_model.h  erl_geom_utils.h  erl_poly_utils.h  erl_types.h  erl_utils.h  erl_yaml_addon.h  se3_pose.h
src/erl_jackal/erl_development/erl_utilities/include/erl_utilities/boost_serialization_helper/: README.md  atomic_serialization.h  bitset_serialization.h  boost_unordered_map_serialization.h  save_load.h  save_load_cvmat.h  save_load_eigen.h  unordered_map_serialization.h
src/erl_jackal/erl_development/erl_utilities/include/erl_utilities/trajectories/: piecewise_polynomial.h  piecewise_trajectory.h  polynomial.h  random_piecewise_polynomial.h  random_polynomial_matrix.h  trajectory.h
src/erl_jackal/erl_development/erl_utilities/src/: erl_utils.cpp
src/erl_jackal/erl_development/erl_utilities/src/trajectories/: piecewise_polynomial.cpp  piecewise_trajectory.cpp  polynomial.cpp
src/erl_jackal/gazebo_p3d_utils/: CMakeLists.txt  package.xml
src/erl_jackal/gazebo_p3d_utils/src/: p3d_link_tf.cpp  p3d_link_tf_complex.cpp
src/erl_jackal/jackal_control/config/: control.yaml  teleop_ps4.yaml  twist_mux.yaml
src/erl_jackal/jackal_control/launch/: control.launch  teleop.launch
src/erl_jackal/jackal_description/: package.xml
src/erl_jackal/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
src/erl_jackal/jackal_description/urdf/accessories/: sick_lms1xx_upright_mount.urdf.xacro
src/erl_jackal/jackal_description/urdf/configs/: ouster_laser  ouster_laser.bat
src/erl_jackal/jackal_gazebo/launch/: empty_jackal_race.launch  jackal_gmapping_joy_astar.launch  jackal_hector_map.launch  jackal_lms1xx_360.launch  jackal_ouster_barebone.launch  jackal_world.launch  ouster_octomap_astar.launch  spawn_jackal.launch  test_hector_slam.launch  test_hector_slam_baselink_use_p3d_localization.launch  test_hector_slam_baselink_use_sm_localization.launch  test_lego.launch  test_p3d_gt_odom.launch
src/erl_jackal/jackal_gazebo/plot_config/: compareOdom.xml  test_p3d_traj2d.xml
src/erl_jackal/jackal_gazebo/rviz/: compare_ground_truth_states.xml  jackal_lms1xx_360.rviz  jackal_ouster.rviz  ouster_octomap_astar.rviz  test_hector_slam.rviz  test_laser2pcl.rviz  test_p3d.rviz
src/erl_jackal/jackal_gazebo/worlds/: corridor.world  corridor_2m.world  corridor_2m_open.world  empty_erl.world  jackal_race_top_down.world  u_shape.world  u_shape_2m.world
src/erl_jackal/ouster-gazebo-simulation/: CMakeLists.txt  README.md
src/erl_jackal/ouster-gazebo-simulation/ouster_gazebo_plugins/: README.md
src/erl_jackal/ouster-gazebo-simulation/ouster_gazebo_plugins/src/: GazeboRosOusterLaser.cpp
src/erl_jackal/ouster-gazebo-simulation/ouster_os1_64/tests/: test_ouster.py
src/utils/map_server/local_sensing/: CMakeLists.txt
src/utils/odom_visualization/launch/: odom_visualization.launch
src/utils/odom_visualization/src/: odom_visualization.cpp
src/utils/pose_utils/: CMakeLists.txt
src/utils/quadrotor_simulator/so3_control/: CMakeLists.txt
src/utils/quadrotor_simulator/so3_quadrotor_simulator/: CMakeLists.txt
src/utils/uav_utils/: CMakeLists.txt
src/utils/uav_utils/scripts/: tf_assist.py
(+15 files in other folders)
