<?xml version="1.0"?>
<package format="2">
  <name>gazebo_p3d_utils</name>
  <version>0.0.0</version>
  <description>The gazebo_p3d_utils package. </description>
  <maintainer email="zhl@todo.todo">zhl</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
</package>
