<?xml version="1.0"?>
<package format="2">
  <name>erl_msgs</name>
  <version>0.0.1</version>
  <description>Various msg definitions</description>
  <maintainer email="natanasov@ucsd.edu">Nikolay Atanasov</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export></export>
</package>

